[package]
name = "rtlauncher"
version = "0.1.0"
authors = ["cqw-acq <chuqijerry@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }

# Backend server dependencies
actix = { version = "0.13", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
actix-web-actors = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"], optional = true }
futures = { version = "0.3", optional = true }

reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"], optional = true }
anyhow = "1"

sha1 = { version = "0.10", optional = true }
zip = { version = "4.2.0", default-features = false, features = ["deflate"], optional = true }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# Server feature enables backend functionality
server = [
    "actix",
    "actix-web",
    "actix-web-actors",
    "actix-cors",
    "actix-files",
    "tokio",
    "futures",
    "reqwest",
    "uuid",
    "sha1",
    "zip",
]
